# SockLib

./: .gitignore  CMakeLists.txt  README.md  install.sh  ipc.cpp  ipc.h  run.sh
demo/: CMakeLists.txt  Client-Demo.cpp  Server-Demo.cpp  clientDemo  configure.sh  runClient.sh  runServer.sh  serverDemo
include/IPCLib/: ipc.h
include/SockLib/: sock.h
src/: ipc.cpp  sock.cpp
